# AssistSupport

./: .editorconfig  .env.example  .gitignore  .gitleaks.toml  .lighthouserc.json  .lighthouserc.production.json  .pre-commit-config.yaml  .stylelintrc.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE_CODE_HANDOFF.md  CODEOWNERS  CODEX_AUDIT_PLAN.md  CODEX_AUDIT_PROMPT.md  CODEX_BRIEF.md  CODEX_IMPLEMENTATION_PLAN.md  Cargo.toml  DIAGNOSTIC_SUMMARY.txt  DOC-RECONCILIATION.md  EXECUTION_STATUS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN2.md  IMPROVEMENT_PLAN_PART1.md  KB_AUDIT_WEEK1_REPORT.md  KB_QUALITY_ANALYSIS.md  LICENSE  Makefile  NEXT_ACTIONS.md  README.md  SECURITY.md  SECURITY_ROADMAP.md  WEEK1_SUMMARY.md  commitlint.config.mjs  eslint.config.mjs  index.html  memory-kernel-test.sqlite  osv-scanner.toml  package.json  playwright.config.ts  (+11 more)
.claude/: CLAUDE.md
.codex/: codex-os.manifest.json  commands.md  verify.commands
.github/: PULL_REQUEST_TEMPLATE.md  TOPICS_SETUP.md  dependabot.yml
.husky/: commit-msg  pre-commit  pre-push
.perf-baselines/: README.md  build-time.json  bundle.json  memory.json
benchmarks/: baseline.macos.v1.json
codex/: CHANGELOG_DRAFT.md  CHECKPOINTS.md  DECISIONS.md  PLAN.md  SESSION_LOG.md  VERIFICATION.md
components/multi-agent-center/crates/multi-agent-center-orchestrator/: Cargo.toml
components/multi-agent-center/crates/multi-agent-center-orchestrator/src/: lib.rs
components/multi-agent-center/crates/multi-agent-center-workflow/: Cargo.toml
components/multi-agent-center/crates/multi-agent-center-workflow/src/: lib.rs
components/outcome-memory/crates/memory-kernel-outcome-cli/: Cargo.toml
components/outcome-memory/crates/memory-kernel-outcome-cli/src/: main.rs
components/outcome-memory/crates/memory-kernel-outcome-cli/tests/: cli_contracts_v1.rs  cli_snapshots_v1.rs  projector_smoke.rs
components/outcome-memory/crates/memory-kernel-outcome-store-sqlite/: Cargo.toml
config/: memorykernel-integration-pin.json
crates/memory-kernel-api/: Cargo.toml
crates/memory-kernel-api/src/: lib.rs
crates/memory-kernel-cli/: Cargo.toml
crates/memory-kernel-cli/src/: main.rs
crates/memory-kernel-cli/tests/: cli_integration.rs
crates/memory-kernel-core/: Cargo.toml
crates/memory-kernel-core/benches/: resolver_bench.rs
crates/memory-kernel-core/src/: lib.rs
crates/memory-kernel-outcome-core/: Cargo.toml
crates/memory-kernel-service/: Cargo.toml
crates/memory-kernel-service/src/: main.rs
crates/memory-kernel-store-sqlite/: Cargo.toml
crates/memory-kernel-store-sqlite/src/: lib.rs
crates/multi-agent-center-cli/: Cargo.toml
crates/multi-agent-center-cli/tests/: run_with_memory_db_api.rs
crates/multi-agent-center-domain/: Cargo.toml
crates/multi-agent-center-domain/src/: lib.rs
crates/multi-agent-center-provider/: Cargo.toml
crates/multi-agent-center-provider/src/: lib.rs
crates/multi-agent-center-trace-core/: Cargo.toml
crates/multi-agent-center-trace-sqlite/: Cargo.toml
crates/multi-agent-center-trace-sqlite/src/: lib.rs
docs/: SECURITY.md  case-study.md  release-runbook.md
examples/: workflow.mock.yaml
openapi/: openapi.generated.json  openapi.yaml
planning/: COMMIT_SPLIT_PLAN.md  FILES_TO_MODIFY.md  KB_DEPLOYMENT_NOTES.md  MASTER_CHECKLIST.md  ROADMAP_TESTING_CHECKLIST.md  TESTING_RESULTS.md  (+1 more)
src/: App.css  (+3 more)
src-tauri/: .gitignore  Cargo.toml  build.rs  osv-scanner.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/benches/: performance.rs
src-tauri/capabilities/: default.json
src-tauri/fuzz/: Cargo.toml
src-tauri/fuzz/fuzz_targets/: namespace_id.rs  search_api_payload.rs  validation_inputs.rs
src-tauri/helpers/: create_test_image.swift  vision_ocr  vision_ocr.swift
src-tauri/permissions/: default.toml
src-tauri/src/: audit.rs  backup.rs  chunker.rs  commands.rs  crypto.rs  db.rs  diagnostics.rs  downloads.rs  embedder.rs  error.rs  exports.rs  gdpr.rs  graph.rs  integrity.rs  jira.rs  jobs.rs  lib.rs  llm.rs  main.rs  metrics.rs  migration.rs  migrations.rs  model_integrity.rs  model_registry.rs  models.rs  ner.rs  ollama.rs  prompts.rs  rag.rs  security.rs  state.rs  utils.rs  validation.rs  vector_index.rs  vector_store.rs
src-tauri/src/commands/: app_core_commands.rs  audit.rs  backup.rs  chat.rs  collections.rs  crypto.rs  decision_tree_runtime.rs  diagnostics.rs  documents.rs  download_runtime.rs  draft_commands.rs  embedding_runtime.rs  gdpr.rs  graph.rs  integrity.rs  jira_commands.rs  jobs_commands.rs  kb_commands.rs  memory_kernel.rs  mod.rs  model_commands.rs  model_runtime.rs  ner.rs  ocr_runtime.rs  ollama.rs  operations_analytics_commands.rs  pilot_feedback.rs  product_workspace.rs  registry.rs  search.rs  search_api.rs  security_commands.rs  settings.rs  startup_commands.rs  vector_runtime.rs
src-tauri/src/db/: analytics_ops_store.rs  bootstrap.rs  draft_store.rs  executor.rs  job_store.rs  knowledge_store.rs  migrations.rs  mod.rs  path_helpers.rs  runtime_state_store.rs  types_analytics_ops.rs  types_drafts.rs  types_knowledge.rs  types_runtime.rs  types_workspace.rs  workspace_store.rs
src-tauri/src/feedback/: export.rs  mod.rs
src-tauri/src/kb/: dns.rs  docx.rs  embeddings.rs  indexer.rs  mod.rs  network.rs  ocr.rs  pdf.rs  search.rs  vectors.rs  watcher.rs  xlsx.rs
src-tauri/src/kb/ingest/: batch.rs  disk.rs  github.rs  mod.rs  web.rs  youtube.rs
src-tauri/src/parsers/: csv_parser.rs  docx.rs  epub.rs  html.rs  markdown.rs  mod.rs  pdf.rs  txt.rs
src-tauri/src/sources/: mod.rs  parser.rs
src-tauri/src/trees/: auth.json  email.json  password.json  vpn.json
src-tauri/tests/: command_contracts.rs  command_module_structure.rs  data_migration.rs  db_encrypted_roundtrip.rs  db_facade_structure.rs  filter_injection.rs  kb_disk_ingestion.rs  kb_pipeline.rs  llama_backend_singleton_policy.rs  namespace_consistency.rs  path_validation.rs  permission_manifest.rs  security.rs  security_dependency_versions.rs  ssrf_dns_rebinding.rs
src-tauri/tests/common/: mod.rs
src-tauri/tests/fixtures/: test.csv  test.html  test.md  test.txt
(+657 files in other folders)
