[workspace]
members = [
  "crates/memory-kernel-core",
  "crates/memory-kernel-store-sqlite",
  "crates/memory-kernel-cli",
  "crates/memory-kernel-api",
  "crates/memory-kernel-service",
  "components/outcome-memory/crates/memory-kernel-outcome-core",
  "components/outcome-memory/crates/memory-kernel-outcome-store-sqlite",
  "components/outcome-memory/crates/memory-kernel-outcome-cli",
  "components/multi-agent-center/crates/multi-agent-center-domain",
  "components/multi-agent-center/crates/multi-agent-center-workflow",
  "components/multi-agent-center/crates/multi-agent-center-policy",
  "components/multi-agent-center/crates/multi-agent-center-provider",
  "components/multi-agent-center/crates/multi-agent-center-trace-core",
  "components/multi-agent-center/crates/multi-agent-center-trace-sqlite",
  "components/multi-agent-center/crates/multi-agent-center-orchestrator",
  "components/multi-agent-center/crates/multi-agent-center-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["MemoryKernel Contributors"]
rust-version = "1.78"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["json"] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
http = "1.1"
memory-kernel-api = { path = "crates/memory-kernel-api" }
memory-kernel-core = { path = "crates/memory-kernel-core" }
memory-kernel-outcome-core = { path = "components/outcome-memory/crates/memory-kernel-outcome-core" }
memory-kernel-store-sqlite = { path = "crates/memory-kernel-store-sqlite" }
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "net"] }
tower = { version = "0.5", features = ["util"] }
ulid = { version = "1.1", features = ["serde"] }
ureq = { version = "2.12", features = ["json"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "deny"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
