[package]
name = "assistsupport"
version = "0.3.2"
description = "AI-powered IT Support Assistant"
authors = ["you"]
edition = "2021"
default-run = "assistsupport"

[lib]
name = "assistsupport_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "assistsupport-cli"
path = "src/bin/assistsupport-cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
rusqlite = { version = "0.32", features = ["bundled-sqlcipher", "bundled-sqlcipher-vendored-openssl"] }

# Security
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }
keyring = { version = "3", features = ["apple-native"] }
base64 = "0.22"

# LLM
llama-cpp-2 = "0.1"

# Embeddings & Vectors
lancedb = "0.17"
arrow = "53"
arrow-array = "53"
arrow-schema = "53"

# KB Processing
pulldown-cmark = "0.12"
pdfium-render = "0.8"
tesseract = "0.13"
encoding_rs = "0.8"
docx-rs = "0.4"
calamine = "0.26"

# File Watching
notify = "8"
notify-debouncer-full = "0.5"
walkdir = "2"

# Downloads
reqwest = { version = "0.12", features = ["stream"] }
futures = "0.3"

# Validation
regex-lite = "0.1"
url = "2"

# DNS resolution for SSRF protection
hickory-resolver = "0.24"

# Unicode normalization for filter sanitization
unicode-normalization = "0.1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
tempfile = "3"
parking_lot = "0.12"
image = "0.25"
once_cell = "1"
zip = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
tesseract = [] # Optional Tesseract OCR backend (not used, Vision is default)

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }

[[bench]]
name = "performance"
harness = false
