[package]
name = "vaultmind"
version = "0.1.0"
description = "VaultMind - Local-first AI-powered knowledge management"
authors = ["VaultMind Contributors"]
license = "MIT"
edition = "2021"

[lib]
name = "vaultmind_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-shell = "2.3.5"
rusqlite = { version = "0.38.0", features = ["bundled", "modern-full"] }
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json", "stream"] }
uuid = { version = "1.20.0", features = ["v4"] }
chrono = { version = "0.4.43", features = ["serde"] }
sha2 = "0.10.9"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
pdf-extract = "0.10.0"
lopdf = "0.35.0"
pulldown-cmark = "0.13.0"
scraper = "0.25.0"
ego-tree = "0.10.0"
csv = "1.4.0"
zip = "7.4.0"
encoding_rs = "0.8.35"
futures-util = "0.3.31"
quick-xml = "0.39.0"
tokio-util = { version = "0.7.18", features = ["rt"] }
r2d2 = "0.8"
r2d2_sqlite = "0.32"

[dev-dependencies]
tempfile = "3"

