[package]
name = "assistsupport"
version = "1.2.0"
description = "Intelligent IT support with semantic search"
authors = ["you"]
edition = "2021"
default-run = "assistsupport"

[lib]
name = "assistsupport_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "assistsupport-cli"
path = "src/bin/assistsupport-cli.rs"

[build-dependencies]
tauri-build = { version = "=2.5.3", features = [] }

[dependencies]
tauri = { version = "=2.9.5", default-features = false, features = ["wry", "compression", "common-controls-v6", "dynamic-acl"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = { version = "2.6.0", default-features = false, features = ["xdg-portal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
rusqlite = { version = "0.32", features = ["bundled-sqlcipher", "bundled-sqlcipher-vendored-openssl"] }

# Security
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.9"
hex = "0.4"
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }
keyring = { version = "3", features = ["apple-native"] }
base64 = "0.22"

# LLM
llama-cpp-2 = "0.1"

# Embeddings & Vectors
lancedb = "0.26.2"
arrow = "57.2"
arrow-array = "57.2"
arrow-schema = "57.2"

# KB Processing
pulldown-cmark = "0.12"
pdfium-render = "0.8"
tesseract = { version = "0.13", optional = true }
encoding_rs = "0.8"
docx-rs = "0.4"
calamine = "0.26"

# File Watching
notify = "8"
notify-debouncer-full = "0.5"
walkdir = "2"

# Downloads
reqwest = { version = "0.12", features = ["stream", "json"] }
futures = "0.3"

# Validation
regex-lite = "0.1"
url = "2"

# DNS resolution for SSRF protection
hickory-resolver = "0.24"

# Unicode normalization for filter sanitization
unicode-normalization = "0.1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
tempfile = "3"
parking_lot = "0.12"
image = "0.25"
once_cell = "1"
zip = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
tesseract = ["dep:tesseract"] # Optional Tesseract OCR backend (not used, Vision is default)

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }

[[bench]]
name = "performance"
harness = false
