[package]
name = "memory-kernel-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time.workspace = true
ulid.workspace = true
memory-kernel-core = { path = "../memory-kernel-core" }
memory-kernel-store-sqlite = { path = "../memory-kernel-store-sqlite" }

[lints]
workspace = true
