[package]
name = "memory-kernel-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
ulid.workspace = true

[dev-dependencies]
criterion = "0.5"
proptest = "1.6"

[[bench]]
name = "resolver_bench"
harness = false
