[package]
name = "multi-agent-center-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
memory-kernel-outcome-core.workspace = true
multi-agent-center-domain = { path = "../multi-agent-center-domain" }
multi-agent-center-orchestrator = { path = "../multi-agent-center-orchestrator" }
multi-agent-center-trace-core = { path = "../multi-agent-center-trace-core" }
multi-agent-center-trace-sqlite = { path = "../multi-agent-center-trace-sqlite" }
multi-agent-center-workflow = { path = "../multi-agent-center-workflow" }
serde_json.workspace = true
time.workspace = true
ulid.workspace = true

[dev-dependencies]
jsonschema = "0.18"
memory-kernel-api.workspace = true
memory-kernel-core.workspace = true
rusqlite.workspace = true
