[package]
name = "multi-agent-center-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
hex.workspace = true
memory-kernel-core.workspace = true
multi-agent-center-domain = { path = "../multi-agent-center-domain" }
serde_json.workspace = true
sha2.workspace = true
time.workspace = true
ulid.workspace = true
ureq.workspace = true
