[package]
name = "multi-agent-center-trace-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
multi-agent-center-domain = { path = "../multi-agent-center-domain" }
serde_json.workspace = true
