[package]
name = "multi-agent-center-trace-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
memory-kernel-core.workspace = true
multi-agent-center-domain = { path = "../multi-agent-center-domain" }
multi-agent-center-trace-core = { path = "../multi-agent-center-trace-core" }
rusqlite.workspace = true
serde_json.workspace = true
time.workspace = true
ulid.workspace = true
