[package]
name = "multi-agent-center-workflow"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
hex.workspace = true
multi-agent-center-domain = { path = "../multi-agent-center-domain" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
