[package]
name = "memory-kernel-outcome-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
memory-kernel-core.workspace = true
memory-kernel-outcome-core = { path = "../memory-kernel-outcome-core" }
memory-kernel-outcome-store-sqlite = { path = "../memory-kernel-outcome-store-sqlite" }
serde.workspace = true
serde_json.workspace = true
time.workspace = true
ulid.workspace = true

[[bin]]
name = "mk"
path = "src/main.rs"

[dev-dependencies]
rusqlite.workspace = true
jsonschema = "0.18"
